--- a/app/src/main/res/values/strings_untranslatable.xml
+++ b/app/src/main/res/values/strings_untranslatable.xml
@@ -13,10 +13,11 @@
     <string name="h" translatable="false">H</string>
     <string name="s" translatable="false">S</string>
     <string name="v" translatable="false">V</string>
-    <string name="rgb_" translatable="false">RGB: %1$s, %2$s, %3$s</string>
-    <string name="rgb_clipboard" translatable="false">rgb(%1$s, %2$s, %3$s)</string>
-    <string name="hex_" translatable="false">HEX: %s</string>
+    <string name="argb_" translatable="false">ARGB: %1$s, %2$s, %3$s, %4$s</string>
+    <string name="argb_clipboard" translatable="false">argb(%1$s, %2$s, %3$s, %4$s)</string>
+    <string name="hex_" translatable="false">HEX: #%s</string>
     <string name="hsv_" translatable="false">HSV: %1$s, %2$s, %3$s</string>
     <string name="hsv_clipboard" translatable="false">hsl(%1$s, %2$s, %3$s)</string>
-    <string name="color_summary" translatable="false">RGB: %1$s, %2$s, %3$s • HEX: %4$s • HSV: %5$s, %6$s, %7$s</string>
+    <string name="color_summary" translatable="false">ARGB: %1$s, %2$s, %3$s, $4$s • HEX: #%4$s • HSV: %5$s, %6$s, %7$s</string>
+    <string name="hex_format" translatable="false">#%s</string>
 </resources>
