--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -293,6 +293,19 @@
                         android:padding="7dp"
                         android:textSize="18sp" />
 
+                    <TextView
+                        android:id="@+id/displayCmyk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/displayHsv"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:fontFamily="@font/abel"
+                        android:text="@string/cmyk_"
+                        android:textColor="@android:color/white"
+                        android:padding="7dp"
+                        android:textSize="18sp" />
+
                     <!-- Copy buttons -->
 
                     <androidx.appcompat.widget.AppCompatImageView
@@ -339,6 +352,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         app:layout_constraintTop_toBottomOf="@+id/copyHex"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/copyCmyk"
+                        app:srcCompat="@drawable/copy"
+                        android:padding="3dp"
+                        android:background="?selectableItemBackgroundBorderless"
+                        android:clickable="true"
+                        android:focusable="true" />
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/copyCmyk"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        app:layout_constraintTop_toBottomOf="@+id/copyHsv"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:srcCompat="@drawable/copy"
