--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,10 +87,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/colorBlue"
                 android:layout_marginTop="5dp"
-                android:orientation="horizontal"
-                android:weightSum="4">
+                android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/displayAlphaLabel"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -140,8 +140,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/containerArgbLabels"
                 android:layout_marginTop="3dp"
-                android:orientation="horizontal"
-                android:weightSum="4">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/displayAlpha"
