--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
     </style>
 
     <style name="toolbarStyle" parent="Theme.AppCompat">
-        <item name="popupTheme">@style/Theme.AppCompat.Light</item>
+        <item name="popupTheme">@style/Theme.AppCompat.DayNight</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@android:color/white</item>
