--- a/app/src/main/res/drawable/button_outline_rounded.xml
+++ b/app/src/main/res/drawable/button_outline_rounded.xml
@@ -3,24 +3,28 @@
   ~ Copyright © Marc Auberer 2020. All rights reserved
   -->
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/buttonColorTransparent">
+    <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
+            <solid android:color="@color/buttonColorTransparent" />
             <corners android:radius="150dp" />
-            <stroke android:color="@color/grayLight" android:width="1.5dp" />
         </shape>
     </item>
-    <item android:state_pressed="true">
-        <shape>
-            <corners android:radius="150dp" />
-            <solid android:color="@color/colorPrimaryTransparent" />
-            <stroke android:color="@color/colorPrimary" android:width="1.5dp" />
-        </shape>
+
+    <item android:id="@android:id/background">
+        <selector>
+            <item android:state_enabled="false">
+                <shape>
+                    <corners android:radius="150dp" />
+                    <stroke android:color="@color/disabled" android:width="1.5dp" />
+                </shape>
+            </item>
+            <item>
+                <shape>
+                    <corners android:radius="150dp" />
+                    <stroke android:color="@color/buttonColor" android:width="1.5dp" />
+                </shape>
+            </item>
+        </selector>
     </item>
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="150dp" />
-            <stroke android:color="@color/colorPrimary" android:width="1.5dp" />
-        </shape>
-    </item>
-</selector>
+</ripple>
