--- a/app/src/main/res/menu/menu_activity_color_selection.xml
+++ b/app/src/main/res/menu/menu_activity_color_selection.xml
@@ -10,17 +10,17 @@
         android:id="@+id/action_edit"
         android:title="@string/rename"
         android:icon="@drawable/edit"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_delete"
         android:title="@string/delete"
         android:icon="@drawable/delete"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_done"
         android:title="@string/done"
         android:icon="@drawable/done"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 </menu>
