--- a/app/src/main/res/drawable/simple_circle.xml
+++ b/app/src/main/res/drawable/simple_circle.xml
@@ -3,7 +3,8 @@
   ~ Copyright © Marc Auberer 2020. All rights reserved
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
     <solid android:color="@color/colorPrimary"/>
