--- a/app/src/main/res/layout/dialog_color_palette.xml
+++ b/app/src/main/res/layout/dialog_color_palette.xml
@@ -7,4 +7,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/palette"
     android:layout_width="match_parent"
+    android:paddingTop="15dp"
+    android:paddingBottom="10dp"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
     android:layout_height="match_parent"/>
