--- a/app/src/main/res/menu/menu_activity_color_selection.xml
+++ b/app/src/main/res/menu/menu_activity_color_selection.xml
@@ -7,6 +7,18 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_import"
+        android:title="@string/import_color_palette"
+        android:icon="@drawable/color_import"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_export"
+        android:title="@string/export_color_palette"
+        android:icon="@drawable/color_export"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/action_edit"
         android:title="@string/rename"
         android:icon="@drawable/edit"
