Temporarily remove import/export icons

--- a/app/src/main/res/menu/menu_activity_color_selection.xml
+++ b/app/src/main/res/menu/menu_activity_color_selection.xml
@@ -6,7 +6,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
+    <!--<item
         android:id="@+id/action_import"
         android:title="@string/import_color_palette"
         android:icon="@drawable/color_import"
@@ -16,7 +16,7 @@
         android:id="@+id/action_export"
         android:title="@string/export_color_palette"
         android:icon="@drawable/color_export"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom" />-->
 
     <item
         android:id="@+id/action_edit"
