--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -7,7 +7,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="67dp"
+    android:layout_height="62dp"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
@@ -15,8 +15,10 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/itemColor"
-        android:layout_width="55dp"
-        android:layout_height="match_parent"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/simple_circle"
         android:padding="0.7dp"
@@ -31,11 +33,11 @@
         app:layout_constraintStart_toEndOf="@+id/itemColor"
         app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="18.5sp"
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="2dp"/>
 
     <TextView
         android:id="@+id/itemColorValues"
