--- a/app/src/main/res/values/strings_untranslatable.xml
+++ b/app/src/main/res/values/strings_untranslatable.xml
@@ -5,6 +5,7 @@
 
 <resources>
     <string name="app_name_cc" translatable="false">Color Converter</string>
+    <string name="developers" translatable="false">ChilliBits</string>
     <string name="a" translatable="false">A</string>
     <string name="r" translatable="false">R</string>
     <string name="g" translatable="false">G</string>
