--- a/app/src/main/res/values-fr/strings_colors.xml
+++ b/app/src/main/res/values-fr/strings_colors.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
+  ~ Copyright © Marc Auberer 2017-2021. All rights reserved
+  -->
+
+<!--
  Loco xml export: Android string resources
  Project: Color Converter Colors
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Wed, 10 Mar 2021 09:46:04 +0000
+ Exported at: Tue, 13 Apr 2021 08:22:52 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="color_alice_blue">Bleu alice</string>
