--- a/app/src/main/res/layout/dialog_edit_hex.xml
+++ b/app/src/main/res/layout/dialog_edit_hex.xml
@@ -8,14 +8,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/dialogHex"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/dialogHexContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:inputType="textCapCharacters"
-        android:hint="@string/hex_code"
-        android:maxLength="9"
-        android:importantForAutofill="no"/>
+        android:layout_marginHorizontal="20dp"
+        android:hint="@string/hex_code">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialogHex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:maxLength="9"
+            android:inputType="textCapCharacters"
+            android:importantForAutofill="no"/>
+    </com.google.android.material.textfield.TextInputLayout>
 </FrameLayout>
